# arbor

./: .gitignore  Cargo.toml  README.md  README_example.md  deploy_to_github_io.sh  match.py
arbor/: Cargo.toml  builder.rs  lib.rs  search.rs  tree.rs
arbor/src/: builder.rs  lib.rs  search.rs
c/: Makefile  README  a.out  arbor.c  arbor.h  bad_battleship.c  bad_battleship.h  dice.c  dice.h  go.sh  main.c  profile.c  profile.h  profile.sh  random.c  random.h  release.sh  reversi.c  reversi.h  rps.h
c/cfg/: debug.mk  linux-debug.mk  linux.mk  osx-debug.mk  osx-metrics.mk  osx.mk  release.mk
c/src/arbor/: arbor.c  arbor.h
c/src/cli/: cli.c  cli.h
c/src/games/bad_battleship/: bad_battleship.c  main.c
c/src/games/dice/: dice.c  dice.h  main.c
c/src/games/reversi/: main.c  reversi.c  reversi.h  reversi_bb.c  reversi_bb.h  reversi_coef.c  reversi_coef.h  reversi_f1.h  reversi_f2.h
c/src/games/rps/: main.c  rps.c
c/src/ut/reversi/: ut_reversi.c
c/src/util/: random.c  random.h
connect4/: Cargo.toml  connect4.rs  main.rs
connect4/src/: connect4.rs  main.rs  mod.rs  web.rs
docs/: index-256ad3b33908064d.js  index-256ad3b33908064d_bg.wasm  index-3e634112fdff7a87.js  index-3e634112fdff7a87_bg.wasm  index-3e8bb87fed8486d3.css  index-47c2eb95055b3a43.js  index-47c2eb95055b3a43_bg.wasm  index-4953809be99fd6ad.js  index-4953809be99fd6ad_bg.wasm  index-665424b7c0c982fd.css  index-8517235b311b6713.css  index-b35761ad66da067d.js  index-b35761ad66da067d_bg.wasm  index-bbbffaf85b9a26bd.js  index-bbbffaf85b9a26bd_bg.wasm  index-d6e16dba1fb45962.js  index-d6e16dba1fb45962_bg.wasm  index-eb589418fcbcb1b3.css  index.html
mancala/: Cargo.toml  main.rs  mancala.rs  test.rs
mancala/src/: main.rs  mancala.rs  web.rs
mancala/src/mancala/: mod.rs  zobrist.rs
mcts/: builder.rs  lib.rs  mcts.rs  randxorshift.rs  search.rs  tree.rs
py/: bindings.py  datasets.py  game.py  ll_preprocess.py  match.py  player.py  preprocess.py  simulate.py  train.py
py/loglikelihood/: preprocess.py  train.py
reversi/: Cargo.toml  main.rs  reversi.rs  test.rs
reversi/src/: main.rs  reversi.rs  web.rs
src/: lib.rs  mcts.rs  randxorshift.rs  tree.rs
tictactoe/: Cargo.toml  main.rs  test.rs  tictactoe.rs
tictactoe/src/: cmd.rs  test.rs  tictactoe.rs  web.rs  web_bindings.rs
www/: Cargo.toml  index.css  index.html  package-lock.json  package.json  webpack.config.js
www/src/: description.rs  index.css  index.js  main.rs  util.rs
www/src/components/: ai_time.rs  component_handler.rs  game_ui.rs  info.rs  mod.rs  setting.rs
www/src/components/connect4/: board.rs  game.rs  instance.rs  mod.rs  square.rs
www/src/components/mancala/: board.rs  instance.rs  mod.rs  pit.rs  stones.rs
www/src/components/reversi/: board.rs  game.rs  instance.rs  square.rs
www/src/components/tictactoe/: board.rs  game.rs  instance.rs  mod.rs  square.rs
