[package]
name = "arbor"
version = "0.1.0"
authors = ["prestonmlangford <prestonmlangford@gmail.com>"]
edition = "2018"
description = "A generic interface to the Monte Carlo Tree Search algorithm."
repository = "https://github.com/prestonmlangford/arbor.git"
license = "MIT"
readme = "README.md"
keywords = ["mcts", "ai", "game", "search", "tree"]
categories = ["algorithms", "game-development", "games"]

[dependencies]
time = "0.2.25"
rand = "0.8.0"
lazy_static = "1.4.0"
rand_xorshift = "0.3.0"
instant = "0.1.12"
rustc-hash = "1.1.0"

[lib]
name = "arbor"
path = "src/lib.rs"
