[package]
name = "mancala"
version = "0.1.0"
authors = ["prestonmlangford <prestonmlangford@gmail.com>"]
edition = "2018"
description = "An implementation of Mancala"
repository = "https://github.com/prestonmlangford/arbor.git"
license = "MIT"
readme = "README.md"
keywords = ["mcts", "ai", "game", "search", "tree"]
categories = ["algorithms", "game-development", "games"]

[dependencies]
rand = "0.8.0"
lazy_static = "1.4.0"
rand_xorshift = "0.3.0"
serde_json = "1.0.74"
serde = { version = "1.0.133", features = ["derive"] }
arbor = { path = "../arbor" }
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
wasm-bindgen = "0.2.78"
getrandom = {version = "0.2", features = ["js"]}

[[bin]]
name = "mancala"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "mancala"
path = "src/web.rs"
