[package]
name = "tictactoe"
version = "0.1.0"
authors = ["prestonmlangford <prestonmlangford@gmail.com>"]
edition = "2018"
description = "An implementation of Tic Tac Toe"
repository = "https://github.com/prestonmlangford/arbor.git"
license = "MIT"
readme = "README.md"
keywords = ["mcts", "ai", "game", "search", "tree"]
categories = ["algorithms", "game-development", "games"]

[dependencies]
wasm-bindgen = "0.2.63"
serde_json = "1.0.74"
serde = { version = "1.0.133", features = ["derive"] }
arbor = { path = "../arbor" }

[lib]
crate-type = ["cdylib", "rlib"]
name = "tictactoe_bindings"
path = "src/web_bindings.rs"

[[bin]]
name = "tictactoe"
path = "src/cmd.rs"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"