[package]
name = "www"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
gloo-console = "0.2"
gloo-timers = "0.2.4"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
arbor = { path = "../arbor" }
tictactoe = { path = "../tictactoe" }
mancala = { path = "../mancala" }
reversi = { path = "../reversi" }
connect4 = { path = "../connect4" }

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]
